# NuMesh

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  run_cmake.sh
examples/: CMakeLists.txt  build_from_grid.cpp  built_from_grid.cpp
src/: CMakeLists.txt  Distributer.hpp  NuMesh_Array.hpp  NuMesh_Communicator.hpp  NuMesh_Core.hpp  NuMesh_Grid2DInitializer.hpp  NuMesh_Halo.hpp  NuMesh_Maps.hpp  NuMesh_Mesh.hpp  NuMesh_Mesh2.hpp  NuMesh_SiloWriter.hpp  NuMesh_Types.hpp  NuMesh_Utils.hpp  helpers.hpp
tests/: CMakeLists.txt  TestingUtils.hpp  tstArray.cpp  tstArray.hpp  tstDriver.hpp  tstHalo.cpp  tstHalo.hpp  tstMaps.cpp  tstMaps.hpp  tstMesh2D.cpp  tstMesh2D.hpp
tests/data/: edges_1_n8_periodic.txt  edges_4_n8_periodic.txt
